--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "harshitethic",
   "license": "MIT",
   "dependencies": {
-    "@adiwajshing/baileys": "4.4.0",
+    "@adiwajshing/baileys": "git+https://github.com/lyfe00011/Baileys.git#fix",
     "@adiwajshing/keyed-db": "^0.2.4",
     "awesome-phonenumber": "^2.64.0",
     "chalk": "^4.1.2",
